tests/compile_fail/wrong_items.stderr
error: Only traits can be made object-safe
 --> $DIR/wrong_items.rs:4:1
  |
4 | fn test() {}
  | ^^^^^^^^^^^^

error: Only traits can be made object-safe
 --> $DIR/wrong_items.rs:7:1
  |
7 | struct Test;
  | ^^^^^^^^^^^^

error: Only traits can be made object-safe
  --> $DIR/wrong_items.rs:10:1
   |
10 | type TestType = Test;
   | ^^^^^^^^^^^^^^^^^^^^^
